# opencv-object-detection

./: CMakeLists.txt  README.md
ObjectDetection/: CMakeLists.txt  Thumbs.db  Timer.cpp  Timer.h  common.hpp  imageManipulation.cpp  launch.vs.json  objectDetection.cpp
ObjectDetection/include/: timer.h
ObjectDetection/src/: image_manipulation.cpp  object_detection.cpp  timer.cpp
include/: timer.h
src/: object_detection.cpp  timer.cpp
